--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/
 coverage/
 node_modules/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
