--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
           name: testing
           command: docker-compose -f docker-compose-test.yml run docker-cicd
   deploy:
-    machine: ture
-#    docker:
-#      - image: circleci/node:9.2.0
-#      - image: docker:17.05.0-ce-git
+#    machine: ture
+    docker:
+      - image: circleci/node:9.2.0
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
       - setup_remote_docker
